# ganslate

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  distributed_launch.py  dummy.yaml  environment.yml  experiment_tracker.py  install_apex.sh  jobscript.sh  keep_minimal.py  launch.py  minimal.py  mkdocs.yml  pyproject.toml  requirements.txt  run_training_distributed.sh  run_training_single_gpu.sh  setup.cfg  setup.py  test.py  train.py  train2.py  trainer.py
.github/workflows/: code_lint.yml  ganslate_testing_suite.yml  yapf_autoformat  yapf_check.yml
checkpoints/exposure_30/: latest_net_G_core.pth.REMOVED.git-id  loss_log.txt  opt.txt
checkpoints/exposure_dataset/: latest_net_G_core.pth.REMOVED.git-id  loss_log.txt  opt.txt
conf/: __init__.py  config.py  experiment1.yaml
conf/base/: config.py  datasets.py  gans.py  generators.py
data/: __init__.py  aligned_dataset.py  base_dataset.py  cbcttoct_dataset.py  ct_dataset.py  ct_nrrd_dataset.py  ctnrrd_dataset.py  dummy_dataset.py  focal_random_patch.py  npy_aligned_2d_dataset.py  npy_aligned_3d_dataset.py  npy_aligned_dataset.py  npy_unaligned_3d_dataset.py  old_aligned_dataset.py  register_truncate.py  stochastic_focal_patching.py
data/old/: aligned_dataset.py  npy_aligned_2d_dataset.py  npy_aligned_3d_dataset.py  single_dataset.py  unaligned_dataset.py
data/utils/: stochastic_focal_patching.py
docker/: Dockerfile  README.md
docker/infer/: Dockerfile  (+1 more)
docs/: README.md  index.md  installation.md  quickstart.md
jobscripts/: 1.sh  1_1.sh  1_1_ext.sh  1_2.sh  2.sh  3.sh  4.sh  experiment1.sh  experiment2.sh  experiment4.sh  jobscript.sh  smalltestjobscript.sh  stol1.sh  stol1_1.sh  stol1_3.sh  stol1_5.sh  stol2.sh  stol3.sh  stol4.sh  stol6.sh
midaGAN/: __init__.py  distributed_launch.py  evaluator.py  inferencer.py  inferer.py  trainer.py  validator.py
models/: __init__.py  base_model.py  cycle_gan_model.py  menu.py  networks.py  networks3d.py  paired_revgan3d_model.py  pix2pix_model.py  rev_vnet.py  unpaired_revgan3d_model.py  util.py
modules/: adaptive_cyclegan_cycle_consistetncy.py  adaptive_cyclegan_discriminator.py  cyclegan_with_structure.py
nn/: __init__.py  base_model.py  menu.py  unpaired_revgan3d_model.py  utils.py
notebooks/: Deformable_Registration.ipynb  Loss_Masking.ipynb  Mask_and_Bound.ipynb  viz.py
options/: base_options.py  test_options.py  train_options.py
pytorch_msssim/: ssim.py
tests/: dataset_check.py  ssim_test.py  test_first_run.py  test_metrics.py
tools/: infer.py  test.py  train.py
util/: sampler.py  sitk_utils.py  util.py  visualizer.py
utils/: medical_imaging.py  sampler.py  sitk_utils.py
(+589 files in other folders)
