[metadata]
name = ganslate
version = 0.1.3
author = "ganslate team"
# author-email = 
url = https://github.com/Maastro-CDS-Imaging-Group/ganslate
description = GAN image-to-image translation framework made simple and extensible.
long_description = file: README.md
long_description_content_type = text/markdown
license = mit
platforms = any
keywords = one, two
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
project_urls =
    Documentation = https://ganslate.readthedocs.io/en/latest/

[options]
zip_safe = False
packages = find: 
include_package_data = True
#setup_requires = 
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = 
    torch 
    opencv-python
    simpleitk 
    opencv-python
    memcnn
    loguru
    wandb
    tensorboard
    monai
    scipy
    scikit-image
    omegaconf
    pandas
    click
    cookiecutter
    wget
    bumpver
    
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    docs
    docker
    tools
    tests
    notebooks
    projects


[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install clinical-evaluation[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    ganslate = ganslate.utils.cli.interface:interface

[yapf]
based_on_style = google
column_limit = 100

[pylint]
fail-under = 8

[pylint.typecheck]
generated-members=torch.*, cv2.*